--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "eslint-plugin-import": "^2.18.2",
     "puppeteer": "^1.20.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.1.0"
   }
 }
