--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "eslint-plugin-import": "^2.18.2",
     "puppeteer": "^1.20.0"
   },
   "devDependencies": {
-    "eslint": "^6.1.0"
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2"
   }
 }
